<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <!-- coming from -->
    <EditText
        android:id="@+id/From_Monday"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:hint="@string/from_monday"
        android:inputType="datetime"/>
    <EditText
        android:id="@+id/From_Tuesday"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/From_Monday"
        android:hint="@string/from_tuesday"
        android:inputType="datetime"/>
    <EditText
        android:id="@+id/From_Wednesday"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/From_Tuesday"
        android:hint="@string/from_wednesday"
        android:inputType="datetime"/>
    <EditText
        android:id="@+id/From_Thursday"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/From_Wednesday"
        android:hint="@string/from_thursday"
        android:inputType="datetime"/>
    <EditText
        android:id="@+id/From_Friday"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/From_Thursday"
        android:hint="@string/from_friday"
        android:inputType="datetime"/>
    <EditText
        android:id="@+id/From_Saturday"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/From_Friday"
        android:hint="@string/from_saturday"
        android:inputType="datetime"/>
    <EditText
        android:id="@+id/From_Sunday"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/From_Saturday"
        android:hint="@string/from_sunday"
        android:inputType="datetime"/>

    <!-- going to -->
    <EditText
        android:id="@+id/To_Monday"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:hint="@string/to_monday"
        android:layout_below="@+id/From_Sunday"
        android:inputType="datetime"/>
    <EditText
        android:id="@+id/To_Tuesday"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/To_Monday"
        android:hint="@string/to_tuesday"
        android:inputType="datetime"/>
    <EditText
        android:id="@+id/To_Wednesday"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/To_Tuesday"
        android:hint="@string/to_wednesday"
        android:inputType="datetime"/>
    <EditText
        android:id="@+id/To_Thursday"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/To_Wednesday"
        android:hint="@string/to_thursday"
        android:inputType="datetime"/>
    <EditText
        android:id="@+id/To_Friday"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/To_Thursday"
        android:hint="@string/to_friday"
        android:inputType="datetime"/>
    <EditText
        android:id="@+id/To_Saturday"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/To_Friday"
        android:hint="@string/to_saturday"
        android:inputType="datetime"/>
    <EditText
        android:id="@+id/To_Sunday"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/To_Saturday"
        android:hint="@string/to_sunday"
        android:inputType="datetime"/>
</LinearLayout>
