<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <EditText
        android:id="@+id/Student_ID"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:hint="@string/student_ID" />
    <EditText
        android:id="@+id/SocialSecurity_number"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_below="@+id/Student_ID"
        android:layout_height="fill_parent"
        android:hint="@string/SS_number" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_login"
        android:onClick="sendLogin"/>
</LinearLayout>
