<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <EditText
        android:id="@+id/Current_coordinates"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:hint="@string/Current_location" />
    <EditText
        android:id="@+id/Destination"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_below="@+id/Current_coordinates"
        android:layout_height="fill_parent"
        android:hint="@string/Desired_destination" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_ride"
        android:onClick="findRide"/>
</LinearLayout>
